fixed alignment issues

--- a/styles/partials/_unsplash.scss
+++ b/styles/partials/_unsplash.scss
@@ -4,22 +4,23 @@
 }
 
 .unsplash-search{
-   background: #fdfdfd;
+   background: #f7f5f5;
 	padding: 0.5rem;
 	border-radius: 5px;
 	border: 1px solid #f1f1f1;
-   width: 200%;
+   width: 1600px;
 }
 
 .unsplash-images{
    display: flex;
-   // overflow-x: auto;
-    width: 200%;
-    flex-wrap: wrap;
+   width: 1600px;
+   flex-wrap: wrap;
    .unsplash-image {
+      flex: 1;
       max-width: 25%;
       width: 205px;
       height: 205px;
       object-fit: cover;
+      cursor: pointer;
    }
 }
